// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Core/Carousel Default smoke-test 1`] = `
<section class="relative w-full max-w-xs"
         aria-roledescription="carousel"
>
  <div class="overflow-hidden">
    <div class="flex -ml-4"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 basis-full pl-4"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            1
          </span>
        </div>
      </div>
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 basis-full pl-4"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            2
          </span>
        </div>
      </div>
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 basis-full pl-4"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            3
          </span>
        </div>
      </div>
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 basis-full pl-4"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            4
          </span>
        </div>
      </div>
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 basis-full pl-4"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            5
          </span>
        </div>
      </div>
    </div>
  </div>
  <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground absolute h-8 w-8 rounded-full -left-12 -translate-y-1/2 top-1/2"
          disabled
  >
    <svg xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-arrow-left h-4 w-4"
    >
      <path d="m12 19-7-7 7-7">
      </path>
      <path d="M19 12H5">
      </path>
    </svg>
    <span class="sr-only">
      Previous slide
    </span>
  </button>
  <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground absolute h-8 w-8 rounded-full -right-12 -translate-y-1/2 top-1/2">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-arrow-right h-4 w-4"
    >
      <path d="M5 12h14">
      </path>
      <path d="m12 5 7 7-7 7">
      </path>
    </svg>
    <span class="sr-only">
      Next slide
    </span>
  </button>
</section>
`;

exports[`Design System/Core/Carousel Size smoke-test 1`] = `
<section class="relative mx-12 w-full max-w-xs"
         aria-roledescription="carousel"
>
  <div class="overflow-hidden">
    <div class="flex -ml-4"
         style="transform: translate3d(0px, 0px, 0px);"
    >
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 pl-4 basis-1/3"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            1
          </span>
        </div>
      </div>
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 pl-4 basis-1/3"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            2
          </span>
        </div>
      </div>
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 pl-4 basis-1/3"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            3
          </span>
        </div>
      </div>
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 pl-4 basis-1/3"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            4
          </span>
        </div>
      </div>
      <div role="group"
           aria-roledescription="slide"
           class="min-w-0 shrink-0 grow-0 pl-4 basis-1/3"
      >
        <div class="flex aspect-square items-center justify-center rounded border bg-card p-6">
          <span class="font-semibold text-4xl">
            5
          </span>
        </div>
      </div>
    </div>
  </div>
  <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground absolute h-8 w-8 rounded-full -left-12 -translate-y-1/2 top-1/2"
          disabled
  >
    <svg xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-arrow-left h-4 w-4"
    >
      <path d="m12 19-7-7 7-7">
      </path>
      <path d="M19 12H5">
      </path>
    </svg>
    <span class="sr-only">
      Previous slide
    </span>
  </button>
  <button class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground absolute h-8 w-8 rounded-full -right-12 -translate-y-1/2 top-1/2">
    <svg xmlns="http://www.w3.org/2000/svg"
         width="24"
         height="24"
         viewbox="0 0 24 24"
         fill="none"
         stroke="currentColor"
         stroke-width="2"
         stroke-linecap="round"
         stroke-linejoin="round"
         class="lucide lucide-arrow-right h-4 w-4"
    >
      <path d="M5 12h14">
      </path>
      <path d="m12 5 7 7-7 7">
      </path>
    </svg>
    <span class="sr-only">
      Next slide
    </span>
  </button>
</section>
`;
